# cobi

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yaml  DOCUMENTATION_SETUP_SUMMARY.md  README.md  READTHEDOCS_SETUP.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/cobi/: calibration.html  data.html  mle.html  quest.html  sht.html  spectra.html  utils.html
_modules/cobi/simulation/: cmb.html  fg.html  mask.html  noise.html  sky.html
_sources/: api.rst.txt  index.rst.txt
_sources/api/: data.rst.txt  mpi.rst.txt  sht.rst.txt  simulation.rst.txt  spectra.rst.txt  utils.rst.txt
api/: calibration.html  data.html  mle.html  mpi.html  quest.html  sht.html  simulation.html  spectra.html  utils.html
cobi/: __init__.py  calibration.py  data.py  mle.py  mpi.py  quest.py  sampling.py  sht.py  spectra.py  utils.py
cobi/mle/: ls.py  snr.py  solve.py  stat.py  utils.py
cobi/simulation/: __init__.py  cmb.py  fg.py  mask.py  noise.py  sky.py
conda/: environment_with_build.yml  environment_without_build.yml
docs/: DOCUMENTATION.md  alpha_config_guide.md  conf.py  index.rst  requirements.txt
docs/api/: calibration.rst  mle.rst  quest.rst  simulation.rst
examples/: aniso.ipynb  calibration.ipynb  tutorial.ipynb
examples/old/: simulations.ipynb
examples/simulations/: aniso.ipynb  anisotorpic_carlos.ipynb  calibration.ipynb  cmb.ipynb  foreground.ipynb  mle.ipynb  noise copy.ipynb  noise.ipynb  sky.ipynb
jobs/: cal.py  cal.sh  mle.sh  run.py
jobs/aniso/: cross.py  cross.sh  sim.py  sim.sh
jobs/iso/: cal.py  cal.sh  cal_lat.sh  cal_old.py  cal_old.sh  latonly.py  mle.sh  run.py
notebooks/: cmb.ipynb
tests/: README.md  __init__.py  conftest.py  test_imports.py  test_simulation.py  test_utils.py
