[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cobi"
authors = [
    {name = "Anto I. Lonappan", email = "antolonappan@icloud.com"}
]
maintainers = [
    {name = "Anto I. Lonappan", email = "antolonappan@icloud.com"}
]
contributors = [
    "Patricia Diego-Palazuelos",
    "Carlos Hervías-Caimapo"
]
description = "Cosmic Birefringence Analysis Pipeline for Simons Observatory"
readme = "README.md"
license = {text = "MIT"}
keywords = ["cosmology", "cmb", "cosmic-birefringence", "simons-observatory", "polarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/antolonappan/cobi"
Documentation = "https://cobi.readthedocs.io/"
Repository = "https://github.com/antolonappan/cobi"
Issues = "https://github.com/antolonappan/cobi/issues"

[project.optional-dependencies]
full = [
    "pymaster>=2.0.0",
    "pysm3>=3.4.0",
    "camb>=1.4.0",
    "ducc0>=0.30.0",
    "emcee>=3.1.0",
    "getdist>=1.4.0",
    "mpi4py>=3.1.0",
    "lenspyx>=1.0.0",
    "pixell>=0.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.9.0",
    "sphinx-autodoc-typehints>=1.19.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.flit.module]
name = "cobi"
 